TestSuite/errors/err0510_anonymous_generic_delegates.pas
//!Нельзя вывести тип анонимного делегата с генерик-параметрами. Укажите тип переменной явно.
type
  t1<T> = class
    
    // Обязательно функция
    function f1(b: T): byte := 1;
    
  end;
  
procedure p1<T>;
begin
  // Обязательно <T> из заголовка подпрограммы (не из описавшего её класса!)
  var a: t1<T>;
  // Обязательно авто-определение типа делегата f
  var f := a.f1;
end;

begin 

end.